New accounts are stored in the database.

--- a/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
+++ b/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
@@ -5,6 +5,7 @@ body {
 	color: #515151;
 	background: #fff url(/images/mixer.png) no-repeat center 0;
 	font: 16px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+	padding-bottom: 70px;
 }
 
 html {
