--- a/src/MTI/MusicAndMeBundle/Resources/views/Home/index.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Home/index.html.twig
@@ -1,1 +1,14 @@
-Hello world !
+{% extends 'MTIMusicAndMeBundle:BaseHTML:base.html.twig' %}
+
+{% block content %}
+	<ul class="breadcrumb">
+		<li class="active">Accueil</li>
+	</ul>
+	<section id="fluidGridSystem">
+		<div class="row show-grid">
+			<div class="span4">Hello</div>
+			<div class="span4">Hello</div>
+			<div class="span4">Hello</div>
+		</div>
+	</section>
+{% endblock %}
