--- a/src/MTI/MusicAndMeBundle/Resources/views/UI/player.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/UI/player.html.twig
@@ -1,7 +1,8 @@
 <footer class="gray-gradient">
 	<div>
-		<div class="player">
-			<span class="black-gradient" style="width: 50%;"></span>
+		<div class="progress">
+			<audio></audio>
+			<div class="bar" style="width: 25%;"></span>
 		</div>
 	</div>
 </footer>
