--- a/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
+++ b/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
@@ -1,18 +1,22 @@
+/* @group Fonts */
+
+@font-face {
+	font-family: tr2n;
+	src: url('/fonts/tr2n.ttf') format("truetype");
+}
+
+/* @end */
+
 /* @group General */
 
 body {
-	margin: 0;
-	color: #515151;
-	background: #fff url(/images/mixer.png) no-repeat center 0;
-	font: 16px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
-	padding-bottom: 70px;
+	/*color: #515151;*/
+	/*background: #fff url(/images/main_bg.png);*/
+	background: #fff;
+	font: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 }
 
-html {
-	height: 100%;
-}
-
-.overlay {
+/*.overlay {
 	display: block;
 	padding: 0;
 	margin: 0;
@@ -23,52 +27,50 @@ html {
 	position: fixed;
 	overflow: hidden;
 	z-index: 10000;
-}
+}*/
 
 
 /* @end */
 
 /* @group Gradients */
 
-.black-gradient {
+/*.black-gradient {
 	background-color: #000;
-	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#333), to(#000));
-	background-image: -webkit-linear-gradient(top, #333, #000);
+	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#555), to(#333));
+	background-image: -webkit-linear-gradient(top, #353535, #222);
 	background-image:    -moz-linear-gradient(top, #222, #000);
 	background-image:     -ms-linear-gradient(top, #222, #000);
 	background-image:      -o-linear-gradient(top, #222, #000);
-}
+}*/
 
-.gray-gradient {
+/*.gray-gradient {
 	background-color: #ccc;
 	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ccc), to(#999));
 	background-image: -webkit-linear-gradient(top, #ccc, #999);
 	background-image:    -moz-linear-gradient(top, #ccc, #999);
 	background-image:     -ms-linear-gradient(top, #ccc, #999);
 	background-image:      -o-linear-gradient(top, #ccc, #999);
-}
+}*/
 
 /* @end */
 
-/* @group Header */
+/* @group Navigation */
 
 header {
-	padding: 20px;
+	/*padding: 20px;
 	color: #fff;
+	background-color: #000;
+	margin-bottom: 20px;*/
 }
 
-
+/*.logo {
+	color: white !important;
+	font: 22px tr2n !important;
+}*/
 
 /* @end */
 
 /* @group Contents */
-
-div.contents {
-	padding-left: 20px;
-	padding-right: 20px;
-	text-align: center;
-	padding-top: 20px;
-}
 
 
 
@@ -79,7 +81,7 @@ div.contents {
 /* @group Player */
 
 .player > span {
-	display: inline-block;
+	/*display: inline-block;
 	height: 100%;
 	background-color: #777;
 	-moz-border-radius: 3px;
@@ -92,11 +94,11 @@ div.contents {
 	-moz-transition: width .4s ease-in-out;
 	-ms-transition: width .4s ease-in-out;
 	-o-transition: width .4s ease-in-out;
-	transition: width .4s ease-in-out;
+	transition: width .4s ease-in-out;*/
 }
 
 .player {
-	background-color: #9c9c9c;
+	/*background-color: #9c9c9c;
 	height: 15px;
 	padding: 3px;
 	width: 100%;
@@ -105,14 +107,14 @@ div.contents {
 	border-radius: 5px;
 	-moz-box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
 	-webkit-box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
-	box-shadow: 0 1px 5px #777 inset, 0 1px 0 #777;
+	box-shadow: 0 1px 5px #777 inset, 0 1px 0 #777;*/
 }
 
 
 
 /* @end */
 
-footer {
+/*footer {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
@@ -120,7 +122,7 @@ footer {
 
 footer > div {
 	padding: 20px;
-}
+}*/
 
 /* @end */
 
@@ -132,7 +134,7 @@ footer > div {
 
 /* @group Forms */
 
-form {
+/*form {
 	width: 350px;
 	text-align: right;
 	margin: 50px auto 50px;
@@ -165,38 +167,36 @@ form input {
 
 input[type="submit"] {
 	margin-top: 20px;
-}
+}*/
 
 /* @group Errors */
 
-.form-errors {
-	/*background-color: rgba(217,0,19,0.75);*/
+/*.form-errors {
 	color: #ff161a;
-	/*padding: 10px;*/
 	margin: 0 0 6px;
-}
+}*/
 
-.form-errors ul {
+/*.form-errors ul {
 	text-align: left;
 	-webkit-margin-before: 0;
 	-webkit-margin-after: 0;
 	-webkit-padding-start: 0;
-}
+}*/
 
-.form-errors li {
+/*.form-errors li {
 	list-style-type: none;
 	font-weight: bold;
-}
+}*/
 
 /* @end */
 
-form > div > div {
+/*form > div > div {
 	margin-bottom: 30px;
-}
+}*/
 
-#validate-container {
+/*#validate-container {
 	text-align: center;
-}
+}*/
 
 /* @end */
 
@@ -275,9 +275,9 @@ div.spinner div.bar12 {
 
 /* @group Alignments */
 
-.center {
+/*.center {
 	text-align: center;
-}
+}*/
 
 
 
