Cleaned the Sign Up/Sign In designs with Boostrap.

--- a/src/MTI/MusicAndMeBundle/Resources/views/BaseHTML/base.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/BaseHTML/base.html.twig
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
+		<meta charset="UTF-8" />
 		<title>{% block title %}Music &amp; Me{% endblock %}</title>
 		{% stylesheets
 		    '@MTIMusicAndMeBundle/Resources/public/css/*'
