--- a/src/MTI/MusicAndMeBundle/Resources/views/Account/login.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Account/login.html.twig
@@ -1,5 +1,8 @@
 {% extends 'MTIMusicAndMeBundle:BaseHTML:base.html.twig' %}
 
+{% form_theme form 'MTIMusicAndMeBundle:Form:fields.html.twig' %}
+
+
 {% block title %}{{ parent() }} - Connexion{% endblock %}
 
 {% block content %}
@@ -16,36 +19,22 @@
 				<form class="form-horizontal" action="{{ path('MTIMusicAndMeBundle_login') }}" method="post" {{ form_enctype(form) }}>
 					<fieldset>
 						<legend>Entrez vos identifiants Music &amp; Me</legend>
-						<div c'ass="control-group"'>
-							<label class="control-label" for="">Adresse email</label>
+						<div class="control-group{% if form_errors(form.email) %} error{% endif %}">
+							{{ form_label(form.email, 'Adresse email', { 'attr': {'class': 'control-label'}}) }}
+							<div class="controls">
+								{{ form_widget(form.email, { 'attr': {'class': 'input-xlarge'}}) }}
+								{% if form_errors(form.email) %}{{ form_errors(form.email) }}{% endif %}
+							</div>
 						</div>
-						
-						
-						<div id="form">
-							<div class="title">Connexion</div>
-							{% if login_error %}
-							<div>
-								<div class="form-errors">
-									<ul>
-										<li class="center">{{ login_error }}</li>
-									</ul>
-								</div>
+						<div class="control-group{% if form_errors(form.password) %} error{% endif %}">
+							{{ form_label(form.password, 'Mot de passe', { 'attr': {'class': 'control-label'}}) }}
+							<div class="controls">
+								{{ form_widget(form.password, { 'attr': {'class': 'input-xlarge'}}) }}
+								{% if form_errors(form.password) %}{{ form_errors(form.password) }}{% endif %}
 							</div>
-							{% endif %}
-							<div>
-								{% if form_errors(form.email) %}
-								<div class="form-errors">{{ form_errors(form.email) }}</div>
-								{% endif %}
-								{{ form_label(form.email, 'Adresse email') }}{{ form_widget(form.email) }}
-							</div>
-								{% if form_errors(form.password) %}
-								<div class="form-errors">{{ form_errors(form.password) }}</div>
-								{% endif %}
-								{{ form_label(form.password, 'Mot de passe') }}{{ form_widget(form.password) }}
-							</div>
-							<div id="validate-container">
-								<input value="Connexion à mon compte" type="submit" />
-							</div>
+						</div>
+						<div class="form-actions">
+							<button type="submit" class="btn btn-primary">Connexion à mon compte</button>
 						</div>
 					</fieldset>
 				</form>
