--- a/src/MTI/MusicAndMeBundle/Resources/views/Header/header_right.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Header/header_right.html.twig
@@ -1,6 +1,6 @@
 {% if is_connected %}
 <li class="dropdown">
-	<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user_name }} </i><b class="caret"></b></a>
+	<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user icon-white"></i> {{ user_name }} <b class="caret"></b></a>
 	<ul class="dropdown-menu">
 		<li><a href="{{ path('MTIMusicAndMeBundle_account') }}">Mon compte</a></li>
 		<li><a href="#">Mes flux</a></li>
