Fixed Breadcrums Naming.

--- a/src/MTI/MusicAndMeBundle/Resources/views/Account/create.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Account/create.html.twig
@@ -8,7 +8,7 @@
 {% block content %}
 	<ul class="breadcrumb">
 		<li>
-			<a href="{{ path('MTIMusicAndMeBundle_homepage') }}">Accueil</a> <span class="divider">/</span>
+			<a href="{{ path('MTIMusicAndMeBundle_homepage') }}">Music &amp; Me</a> <span class="divider">/</span>
 		</li>
 		<li class="active">Créer un compte</li>
 	</ul>
