--- a/src/MTI/MusicAndMeBundle/Resources/views/Home/index.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Home/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 	<ul class="breadcrumb">
-		<li class="active">Accueil</li>
+		<li class="active">Music &amp; Me</li>
 	</ul>
 	<section id="fluidGridSystem">
 		<div class="row show-grid">
