--- a/src/MTI/MusicAndMeBundle/Resources/views/Account/create.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Account/create.html.twig
@@ -13,7 +13,7 @@
 		<li class="active">Créer un compte</li>
 	</ul>
 
-	<section id="login">
+	<section id="create">
 		<h2>Créer un compte</h2>
 		<div class="row">
 			<div class="span12">
