--- a/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
+++ b/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
@@ -282,3 +282,15 @@ div.spinner div.bar12 {
 
 
 /* @end */
+
+/* @group Stream */
+
+.create-stream {
+	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff), to(#f5f5f5));
+	background-image: -webkit-linear-gradient(top, #fff, #f5f5f5);
+	background-image:    -moz-linear-gradient(top, #fff, #f5f5f5);
+	background-image:     -ms-linear-gradient(top, #fff, #f5f5f5);
+	background-image:      -o-linear-gradient(top, #fff, #f5f5f5);
+}
+
+/* @end */
