--- a/src/MTI/MusicAndMeBundle/Resources/views/Header/header_right.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Header/header_right.html.twig
@@ -3,7 +3,7 @@
 	<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user icon-white"></i> {{ user_name }} <b class="caret"></b></a>
 	<ul class="dropdown-menu">
 		<li><a href="{{ path('MTIMusicAndMeBundle_account') }}">Mon compte</a></li>
-		<li><a href="#">Mes flux</a></li>
+		<li><a href="{{ path('MTIMusicAndMeBundle_streamIndex') }}">Mes flux</a></li>
 		<li class="divider"></li>
 		<li><a href="{{ path('MTIMusicAndMeBundle_logout') }}">Déconnexion</a></li>
 	</ul>
