Started to design Streams tables.

--- a/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
+++ b/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
@@ -293,4 +293,12 @@ div.spinner div.bar12 {
 	background-image:      -o-linear-gradient(top, #fff, #f5f5f5);
 }
 
+#stream-musics td, #stream-musics th {
+	vertical-align: middle;
+}
+
+#stream-musics td:last-child, #stream-musics th:last-child {
+	text-align: right !important;
+}
+
 /* @end */
