--- a/src/MTI/MusicAndMeBundle/Resources/views/Stream/view.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Stream/view.html.twig
@@ -5,15 +5,50 @@
 		<li>
 			<a href="{{ path('MTIMusicAndMeBundle_homepage') }}">Music &amp; Me</a> <span class="divider">/</span>
 		</li>
-		<li class="active">Mes flux</li>
+		<li>
+			<a href="{{ path('MTIMusicAndMeBundle_streamIndex') }}">Mes flux</a> <span class="divider">/</span>
+		</li>
+		<li class="active">{{ stream.name }}</li>
 	</ul>
-	<section id="my-streams">
+	<section id="stream-musics">
 		<div class="page-header">
 			<h1>{{ stream.name }}</h1>
 		</div>
-		<div class="row">
-			<div class="span12">
-			</div>
-		</div>
+		<table class="table">
+			<thead>
+				<tr>
+					<th></th>
+					<th>Musique</th>
+					<th>Status</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Lorem Ipsum</td>
+					<td>Lorem Ipsum, Lorem Ipsum</td>
+					<td><span class="label label-success">En ce moment</span></td>
+					<td>
+						<a class="btn btn-primary" href="#"><i class="icon-play icon-white"></i></a>
+					</td>
+				</tr>
+				<tr>
+					<td>Lorem Ipsum</td>
+					<td>Lorem Ipsum, Lorem Ipsum</td>
+					<td><span class="badge">23 votes</span></td>
+					<td>
+						<a class="btn" href="#"><i class="icon-arrow-up icon-black"></i></a>
+					</td>
+				</tr>
+				<tr>
+					<td>Lorem Ipsum</td>
+					<td>Lorem Ipsum, Lorem Ipsum</td>
+					<td><span class="badge">12 votes</span></td>
+					<td>
+						<a class="btn" href="#"><i class="icon-arrow-up icon-black"></i></a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
 	</section>
 {% endblock %}
