Improved the Stream view template.

--- a/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
+++ b/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
@@ -204,9 +204,10 @@ input[type="submit"] {
 
 div.spinner {
 	position: relative;
-	width: 54px;
-	height: 54px;
+	width: 14px;
+	height: 14px;
 	display: inline-block;
+	vertical-align: middle;
 }
 
 div.spinner div {
@@ -218,7 +219,7 @@ div.spinner div {
 	top: 37%;
 	opacity: 0;
 	-webkit-border-radius: 50px;
-	-webkit-box-shadow: 0 0 3px rgba(0,0,0,0.2);
+	-webkit-box-shadow: 0 0 3px rgba(0,0,0,0.2) !important;
 	-webkit-animation: fade 1s linear infinite;
 }
 
@@ -271,6 +272,11 @@ div.spinner div.bar12 {
 	-webkit-animation-delay: -0.0833s;
 }
 
+@-webkit-keyframes fade {
+	from {opacity: 1;}
+	to {opacity: 0.25;}
+}
+
 /* @end */
 
 /* @group Alignments */
@@ -299,6 +305,14 @@ div.spinner div.bar12 {
 
 #stream-musics td:last-child, #stream-musics th:last-child {
 	text-align: right !important;
+}
+
+#stream-musics table tr:first-child {
+	font-weight: bold;
+}
+
+#stream-musics td li, #stream-musics td ul {
+	vertical-align: middle;
 }
 
 /* @end */
