--- a/src/MTI/MusicAndMeBundle/Resources/views/Stream/index.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Stream/index.html.twig
@@ -15,7 +15,7 @@
 			<div class="span12">
 				<ul class="thumbnails">
 					<li class="span2">
-						<div class="thumbnail create-stream" data-placement="bottom" rel="popover" data-original-title="Créer un nouveau flux">
+						<div class="thumbnail create-stream tip" data-placement="bottom" rel="popover" data-original-title="Créer un nouveau flux">
 							<a href="{{ path('MTIMusicAndMeBundle_streamCreate') }}"><img src="/images/add.png" alt="" /></a>
 						</div>
 					</li>
