--- a/src/MTI/MusicAndMeBundle/Resources/views/Stream/view.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Stream/view.html.twig
@@ -14,6 +14,9 @@
 		<div class="page-header">
 			<h1>{{ stream.name }}</h1>
 		</div>
+		<div>
+			<h3>&ensp;</h3>
+		</div>
 		<table class="table">
 			<thead>
 				<tr>
@@ -25,27 +28,123 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td>Lorem Ipsum</td>
-					<td>Lorem Ipsum, Lorem Ipsum</td>
-					<td><span class="label label-success">En ce moment</span></td>
 					<td>
-						<a class="btn btn-primary" href="#"><i class="icon-play icon-white"></i></a>
+						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+					</td>
+					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
+					<td><span class="label label-important">En ce moment</span></td>
+					<td>
+						<div class="btn btn-primary tip" data-placement="bottom" rel="popover" data-original-title="Écouter !"><i class="icon-play icon-white"></i></div>
 					</td>
 				</tr>
 				<tr>
-					<td>Lorem Ipsum</td>
-					<td>Lorem Ipsum, Lorem Ipsum</td>
+					<td>
+						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+					</td>
+					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
 					<td><span class="badge">23 votes</span></td>
 					<td>
-						<a class="btn" href="#"><i class="icon-arrow-up icon-black"></i></a>
+						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></div>
 					</td>
 				</tr>
 				<tr>
-					<td>Lorem Ipsum</td>
-					<td>Lorem Ipsum, Lorem Ipsum</td>
+					<td>
+						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+					</td>
+					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
+					<td><span class="badge">15 votes</span></td>
+					<td>
+						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+					</td>
+					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
 					<td><span class="badge">12 votes</span></td>
 					<td>
-						<a class="btn" href="#"><i class="icon-arrow-up icon-black"></i></a>
+						<a class="btn btn-success disabled" href="#"><i class="icon-ok icon-white"></i></a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+					</td>
+					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
+					<td><span class="badge">11 votes</span></td>
+					<td>
+						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+					</td>
+					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
+					<td><span class="badge">11 votes</span></td>
+					<td>
+						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+					</td>
+					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
+					<td><span class="badge">11 votes</span></td>
+					<td>
+						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+					</td>
+					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
+					<td><span class="badge">6 votes</span></td>
+					<td>
+						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+					</td>
+					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
+					<td><span class="badge">5 votes</span></td>
+					<td>
+						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+					</td>
+					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
+					<td><span class="badge">5 votes</span></td>
+					<td>
+						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+					</td>
+					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
+					<td><span class="badge">3 votes</span></td>
+					<td>
+						<a class="btn tip" href="# data-placement="bottom" rel="popover" data-original-title="Voter !""><i class="icon-arrow-up icon-black"></i></a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+					</td>
+					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
+					<td><span class="badge">2 votes</span></td>
+					<td>
+						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
 					</td>
 				</tr>
 			</tbody>
