--- a/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
+++ b/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
@@ -315,4 +315,20 @@ div.spinner div.bar12 {
 	vertical-align: middle;
 }
 
+.multi-cover-table{
+	border-collapse:collapse;
+	padding:0px;
+	margin:0px;
+	border:none;
+}
+
+.multi-cover-table td{
+	padding:1px;
+	margin:1px;
+	border:none;
+}
+
+.multi-cover-table tr{
+  border:none;
+}
 /* @end */
