--- a/src/MTI/MusicAndMeBundle/Resources/views/Header/header.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Header/header.html.twig
@@ -7,7 +7,7 @@
 				</a>
 			</ul>
 			<ul class="nav pull-right">
-				<form class="navbar-search pull-left" action="">
+			<form class="navbar-search pull-left" action="{{ path('MTIMusicAndMeBundle_search') }}" method="POST">
 					<input type="text" class="search-query span2" placeholder="Rechercher un flux">
 				</form>
 				{% include 'MTIMusicAndMeBundle:Header:header_right.html.twig' with {'user_name': user_name, 'is_connected': is_connected} %}
