Vote improvements. Basic AJAX calls to vote.

--- a/src/MTI/MusicAndMeBundle/Resources/views/BaseHTML/base.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/BaseHTML/base.html.twig
@@ -21,6 +21,7 @@
 		{% endblock %} -->
 		{% javascripts
 		    '@MTIMusicAndMeBundle/Resources/public/js/jquery-1.7.1.min.js'
+		    '@MTIMusicAndMeBundle/Resources/public/js/jquery.json-2.3.min.js'
 			'@MTIMusicAndMeBundle/Resources/public/js/bootstrap.js'
 			'@MTIMusicAndMeBundle/Resources/public/js/script.js'
 		%}
