--- a/src/MTI/MusicAndMeBundle/Resources/views/Stream/view.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Stream/view.html.twig
@@ -17,6 +17,7 @@
 		<div>
 			<h3>&ensp;</h3>
 		</div>
+		<div id="stream-id" style="display: none;">{{ stream.id }}</div>
 		<table class="table">
 			<thead>
 				<tr>
@@ -28,6 +29,7 @@
 			</thead>
 			<tbody>
 				<tr>
+					<td class="music-id" style="display: none;">3</td>
 					<td>
 						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
 					</td>
@@ -38,11 +40,45 @@
 					</td>
 				</tr>
 				<tr>
+					<td class="music-id" style="display: none;">3</td>
 					<td>
 						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
 					</td>
 					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
-					<td><span class="badge">23 votes</span></td>
+					<td><span class="badge"><span class="vote-count">23</span> votes</span></td>
+					<td>
+						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></div>
+					</td>
+				</tr>
+				<tr>
+					<td class="music-id" style="display: none;">3</td>
+					<td>
+						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+					</td>
+					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
+					<td><span class="badge"><span class="vote-count">23</span> votes</span></td>
+					<td>
+						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></div>
+					</td>
+				</tr>
+				<tr>
+					<td class="music-id" style="display: none;">3</td>
+					<td>
+						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+					</td>
+					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
+					<td><span class="badge"><span class="vote-count">23</span> votes</span></td>
+					<td>
+						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></div>
+					</td>
+				</tr>
+				<tr>
+					<td class="music-id" style="display: none;">3</td>
+					<td>
+						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
+					</td>
+					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
+					<td><span class="badge"><span class="vote-count">23</span> votes</span></td>
 					<td>
 						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></div>
 					</td>
@@ -52,99 +88,31 @@
 						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
 					</td>
 					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
-					<td><span class="badge">15 votes</span></td>
-					<td>
-						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
-					</td>
-					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
-					<td><span class="badge">12 votes</span></td>
+					<td><span class="badge"><span class="vote-count">12</span> votes</span></td>
 					<td>
 						<a class="btn btn-success disabled" href="#"><i class="icon-ok icon-white"></i></a>
 					</td>
 				</tr>
 				<tr>
+					<td class="music-id" style="display: none;">3</td>
 					<td>
 						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
 					</td>
 					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
-					<td><span class="badge">11 votes</span></td>
+					<td><span class="badge"><span class="vote-count">23</span> votes</span></td>
 					<td>
-						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
+						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></div>
 					</td>
 				</tr>
 				<tr>
+					<td class="music-id" style="display: none;">3</td>
 					<td>
 						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
 					</td>
 					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
-					<td><span class="badge">11 votes</span></td>
+					<td><span class="badge"><span class="vote-count">23</span> votes</span></td>
 					<td>
-						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
-					</td>
-					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
-					<td><span class="badge">11 votes</span></td>
-					<td>
-						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
-					</td>
-					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
-					<td><span class="badge">6 votes</span></td>
-					<td>
-						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
-					</td>
-					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
-					<td><span class="badge">5 votes</span></td>
-					<td>
-						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
-					</td>
-					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
-					<td><span class="badge">5 votes</span></td>
-					<td>
-						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
-					</td>
-					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
-					<td><span class="badge">3 votes</span></td>
-					<td>
-						<a class="btn tip" href="# data-placement="bottom" rel="popover" data-original-title="Voter !""><i class="icon-arrow-up icon-black"></i></a>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
-					</td>
-					<td>Lorem Ipsum — Lorem Ipsum — Lorem Ipsum</td>
-					<td><span class="badge">2 votes</span></td>
-					<td>
-						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></a>
+						<div class="btn tip" data-placement="bottom" rel="popover" data-original-title="Voter !"><i class="icon-arrow-up icon-black"></i></div>
 					</td>
 				</tr>
 			</tbody>
