--- a/src/MTI/MusicAndMeBundle/Resources/views/Header/header_right.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Header/header_right.html.twig
@@ -1,3 +1,6 @@
+<form class="navbar-search pull-left" action="{{ path('MTIMusicAndMeBundle_search') }}" method="POST">
+	<input type="text" class="search-query span2" placeholder="Rechercher un flux" name="searchFlux">
+</form>
 {% if is_connected %}
 <li class="dropdown">
 	<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user icon-white"></i> {{ user_name }} <b class="caret"></b></a>
