--- a/src/MTI/MusicAndMeBundle/Resources/views/Search/viewSearchZik.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Search/viewSearchZik.html.twig
@@ -1,6 +1,7 @@
 {% extends 'MTIMusicAndMeBundle:BaseHTML:base.html.twig' %}
 
 {% block content %}
+<span id="reload-header" data-reload-value="false" style="{display:none}"></span>
 <ul class="breadcrumb">
 <li>
 <a href="{{ path('MTIMusicAndMeBundle_homepage') }}">Music &amp; Me</a> <span class="divider">/</span>
@@ -16,6 +17,6 @@
 				</form>
 			</div>
 		</div>
-	</section>
+</section>
 
 {% endblock %}
