--- a/src/MTI/MusicAndMeBundle/Resources/views/Search/viewSearchZik.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Search/viewSearchZik.html.twig
@@ -1,21 +1,5 @@
 {% extends 'MTIMusicAndMeBundle:BaseHTML:base.html.twig' %}
 
 {% block content %}
-<ul class="breadcrumb">
-<li>
-<a href="{{ path('MTIMusicAndMeBundle_homepage') }}">Music &amp; Me</a> <span class="divider">/</span>
-</li>
-<li class="active">Recherche de musique</li>
-</ul>
-
-<section id="form">
-		<div class="row">
-			<div class="span12">
-				<form class="form-horizontal" action="#" method="post">
-				  <input type="text" class="search-query span2" placeholder="Rechercher une musique" name="searchZik">
-				</form>
-			</div>
-		</div>
-	</section>
-
+	{% include 'MTIMusicAndMeBundle:Search:viewSearchZik.ajax.twig' with {'toSearch' : toSearch} %}
 {% endblock %}
