--- a/src/MTI/MusicAndMeBundle/Resources/views/Upload/index.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Upload/index.html.twig
@@ -1,30 +1,5 @@
 {% extends 'MTIMusicAndMeBundle:BaseHTML:base.html.twig' %}
 
 {% block content %}
-<ul class="breadcrumb">
-<li>
-<a href="{{ path('MTIMusicAndMeBundle_homepage') }}">Music &amp; Me</a> <span class="divider">/</span>
-</li>
-<li class="active">Upload</li>
-</ul>
-
-<section id="Upload">
-		<h2>Upload de musiques</h2>
-		<div class="row">
-			<div class="span12">
-				<form class="form-horizontal" action="#" method="post" {{ form_enctype(form) }}>
-				<fieldset>
-				<legend>Choisissez votre musique ou un zip en contenant</legend>
-							<div class="controls">
-								{{ form_widget(form.file, { 'attr': {'class': 'input-xlarge'}}) }}
-							</div>
-						<div class="form-actions">
-							<button type="submit" class="btn btn-primary">Envoyer</button>
-						</div>
-				</fieldset>
-				</form>
-			</div>
-		</div>
-	</section>
-
+	{% include 'MTIMusicAndMeBundle:Upload:index.ajax.twig' %}
 {% endblock %}
