Included alerts blocks to display feedback informations.

--- a/src/MTI/MusicAndMeBundle/Resources/views/Stream/view.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/Stream/view.html.twig
@@ -40,7 +40,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="music-id" style="display: none;">3</td>
+					<td class="music-id" style="display: none;">86786234</td>
 					<td>
 						<img class="thumbnail" src="/images/cover_thumb.jpg" alt="">
 					</td>
