--- a/src/MTI/MusicAndMeBundle/Resources/views/BaseHTML/base.html.twig
+++ b/src/MTI/MusicAndMeBundle/Resources/views/BaseHTML/base.html.twig
@@ -14,6 +14,26 @@
 			{% include 'MTIMusicAndMeBundle:Header:header.html.twig' with {'user_name': user_name, 'is_connected': is_connected} %}
 		{% endblock %}
 		<div class="container">
+			<div id="error-alert" class="alert alert-error alert-block" style="display: none;">
+				<a class="close">×</a>
+				<h4 class="alert-heading"></h4>
+				<span></span>
+			</div>
+			<div id="success-alert" class="alert alert-success alert-block" style="display: none;">
+				<a class="close" data-dismiss="alert">×</a>
+				<h4 class="alert-heading"></h4>
+				<span></span>
+			</div>
+			<div id="info-alert" class="alert alert-info alert-block" style="display: none;">
+				<a class="close" data-dismiss="alert">×</a>
+				<h4 class="alert-heading"></h4>
+				<span></span>
+			</div>
+			<div id="warning-alert" class="alert alert-block" style="display: none;">
+				<a class="close" data-dismiss="alert">×</a>
+				<h4 class="alert-heading"></h4>
+				<span></span>
+			</div>
 		{% block content %}{% endblock %}
 		</div>
 		<!-- {% block footer %}
