Stream now lists next songs.

--- a/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
+++ b/src/MTI/MusicAndMeBundle/Resources/public/css/style.css
@@ -332,3 +332,16 @@ div.spinner div.bar12 {
   border:none;
 }
 /* @end */
+
+/* @group Alerts */
+
+.alert {
+	position: fixed;
+	top: 50px;
+	width: 1119px;
+	z-index: 1000;
+}
+
+
+
+/* @end */
